Etape3: Intégrer la page d'accueil et ccréation champs formulaire de contact

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-  <header>
+  <header role="banner">
     <!-- LOGO + Titre  -->
-    <img src="assets/images/logo.png" class="logo" alt="fisheye logo" />
-    <h1>Nos photographes</h1>
+    <a href="./index.html" aria-label="fisheye home page" class="home-link">
+      <img src="assets/images/logo.png" class="logo" alt="fisheye logo - Page d’accueil" />
+    </a>
+    <h1 aria-label="Nos photographes">Nos photographes</h1>
   </header>
 
   <main id="main">
