etape5 affichage info photographe

--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
     </a>
   </header>
 
-  <main id="main" aria-hidden="false">
+  <main id="main" class="main-photographer" aria-hidden="false">
     <!-- bouton contactez moi -->
     <div class="photograph-header">
       <button class="contact_button" aria-label="Bouton contactez-moi">Contactez-moi</button>
