--- a/photographer.html
+++ b/photographer.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Fisheye - Portfolio du photographe">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <title>Fisheye</title>
 </head>
@@ -24,7 +25,11 @@
     <div class="photograph-header">
       <button class="contact_button" aria-label="Bouton contactez-moi">Contactez-moi</button>
     </div>
+    <div class="medias">
+      <section class="gallery">
 
+      </section>
+    </div>
   </main>
 
 
