--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/home.css" rel="stylesheet" type="text/css" />
 
   <title>Fisheye</title>
 </head>
 
-<body>
-  <header role="banner">
-    <!-- LOGO + Titre  -->
-    <a href="./index.html" class="home-link" aria-label="fisheye home page">
-      <img src="assets/images/logo.png" class="logo" alt="fisheye logo">
-    </a>
-    <h1 aria-label="Nos photographes">Nos photographes</h1>
-  </header>
+<body id="page-home">
+  <div class="page">
+    <header role="banner">
+      <!-- LOGO + Titre  -->
+      <a href="./index.html" class="home-link" aria-label="fisheye home page">
+        <img src="assets/images/logo.png" class="logo" alt="fisheye logo">
+      </a>
+      <h1 aria-label="Nos photographes">Nos photographes</h1>
+    </header>
 
-  <main id="main">
-    <!-- Affichage de la liste des photographes -->
-    <div class="photographer_section"></div>
-  </main>
+    <main id="main">
+      <!-- Affichage de la liste des photographes -->
+      <div class="photographer_section"></div>
+    </main>
+  </div>
+
   <!-- Appel des scripts js -->
   <script type="module" src="scripts/pages/index.js"></script>
   <script type="module" src="scripts/templates/photographerTemplate.js"></script>
