--- a/photographer.html
+++ b/photographer.html
@@ -8,35 +8,35 @@
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/photographer.css" rel="stylesheet" type="text/css" />
+
   <title>Fisheye</title>
 </head>
 
 <body>
+  <div class="page">
+    <!-- lien vers la page d'accueil -->
+    <header role="banner">
+      <a href="./index.html" aria-label="fisheye home page" class="home-link">
+        <img src="assets/images/logo.png" class="logo" alt="fisheye logo - Page d’accueil" />
+      </a>
+    </header>
 
-  <!-- lien vers la page d'accueil -->
-  <header role="banner">
-    <a href="./index.html" aria-label="fisheye home page" class="home-link">
-      <img src="assets/images/logo.png" class="logo" alt="fisheye logo - Page d’accueil" />
-    </a>
-  </header>
+    <main id="main" class="main-photographer" aria-hidden="false">
+      <!-- bouton contactez moi -->
+      <div class="photograph-header">
+        <button class="contact_button" aria-label="Bouton contactez-moi">Contactez-moi</button>
+      </div>
+      <div class="medias">
+        <section class="gallery">
 
-  <main id="main" class="main-photographer" aria-hidden="false">
-    <!-- bouton contactez moi -->
-    <div class="photograph-header">
-      <button class="contact_button" aria-label="Bouton contactez-moi">Contactez-moi</button>
-    </div>
-    <div class="medias">
-      <section class="gallery">
+        </section>
+      </div>
+      <div class="container-likes-price">
 
-      </section>
-    </div>
-    <div class="container-likes-price">
+      </div>
 
-    </div>
-
-  </main>
-
-
+    </main>
 
 
 
@@ -45,44 +45,48 @@
 
 
 
-  <!-- Modal de contact -->
-  <div id="contact_modal">
-    <div class="modal" role="dialog" aria-hidden="true" aria-describedby="modalTitle">
-
-      <header>
-        <h2 id="modalTitle">Contactez-moi</h2>
-        <!-- <img src="assets/icons/close.svg" onclick="closeModal()" class="modal-close-btn" /> -->
-        <button class="modal-close-btn" aria-label="Bouton de fermeture du modal de contact">
-          <img src="assets/icons/close.svg" alt="Bouton de fermeture icon X" />
-        </button>
-      </header>
 
 
+    <!-- Modal de contact -->
+    <div id="contact_modal">
+      <div class="modal" role="dialog" aria-hidden="true" aria-describedby="modalTitle">
+
+        <header>
+          <h2 id="modalTitle">Contactez-moi</h2>
+          <!-- <img src="assets/icons/close.svg" onclick="closeModal()" class="modal-close-btn" /> -->
+          <button class="modal-close-btn" aria-label="Bouton de fermeture du modal de contact">
+            <img src="assets/icons/close.svg" alt="Bouton de fermeture icon X" />
+          </button>
+        </header>
 
 
 
-      <!-- Formulaire -->
-      <form>
-        <div>
-
-          <label for="prenom">Prénom </label>
-          <input type="text" name="prenom" id="prenom" required aria-required=true />
-
-          <label for="nom">Nom</label>
-          <input type="text" name="nom" id="nom" required aria-required=true />
-
-          <label for="email">Email </label>
-          <input type="email" name="email" id="email" required aria-required=true />
-
-          <label for="message"> Votre message </label>
-          <textarea name="message" id="message" cols="80" rows="5" required aria-required=true></textarea>
 
 
-        </div>
-        <button class="contact_button" type="submit" aria-label="Envoyer formulaire">Envoyer</button>
-      </form>
+        <!-- Formulaire -->
+        <form>
+          <div>
+
+            <label for="prenom">Prénom </label>
+            <input type="text" name="prenom" id="prenom" required aria-required=true />
+
+            <label for="nom">Nom</label>
+            <input type="text" name="nom" id="nom" required aria-required=true />
+
+            <label for="email">Email </label>
+            <input type="email" name="email" id="email" required aria-required=true />
+
+            <label for="message"> Votre message </label>
+            <textarea name="message" id="message" cols="80" rows="5" required aria-required=true></textarea>
+
+
+          </div>
+          <button class="contact_button" type="submit" aria-label="Envoyer formulaire">Envoyer</button>
+        </form>
+      </div>
     </div>
   </div>
+
 
   <script type="module" src="./scripts/pages/photographerPage.js"></script>
   <script type="module" src="scripts/utils/contactForm.js"></script>
