--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <!-- <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 
@@ -19,11 +21,14 @@
         <img src="assets/images/logo.png" class="logo" alt="fisheye logo">
       </a>
       <h1 aria-label="Nos photographes">Nos photographes</h1>
+
     </header>
 
     <main id="main">
+
       <!-- Affichage de la liste des photographes -->
       <div class="photographer_section"></div>
+
     </main>
   </div>
 
