--- a/photographer.html
+++ b/photographer.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Fisheye - Portfolio du photographe">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link href="css/photographer.css" rel="stylesheet" type="text/css" />
 
