--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-  <!-- <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 
@@ -33,8 +33,8 @@
   </div>
 
   <!-- Appel des scripts js -->
-  <script type="module" src="scripts/pages/index.js"></script>
-  <script type="module" src="scripts/templates/photographerTemplate.js"></script>
+  <script type="module" src="./scripts/pages/index.js"></script>
+  <script type="module" src="./scripts/templates/photographerTemplate.js"></script>
 
 
 </body>
