--- a/photographer.html
+++ b/photographer.html
@@ -6,15 +6,15 @@
   <meta name="description" content="Fisheye - Portfolio du photographe">
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-  <!-- <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://kit.fontawesome.com/af057d8543.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link href="css/photographer.css" rel="stylesheet" type="text/css" />
 
   <title>Fisheye</title>
 </head>
 
-<body id="">
+<body>
   <div class="page">
     <!-- lien vers la page d'accueil -->
     <header role="banner">
@@ -28,6 +28,11 @@
       <div class="photograph-header">
         <button class=" btn-open contact-button" aria-label="Bouton contactez-moi">Contactez-moi</button>
       </div>
+
+      <div class="form-wrapper">
+        <div class="sorter-form-wrapper"></div>
+      </div>
+
       <div class="medias">
         <section class="gallery">
 
@@ -39,36 +44,22 @@
       </div>
 
     </main>
-
-
-
-
-
-
-
-
-
-
     <!-- Modal de contact -->
     <div class="contact-modal wrapper" aria-hidden=" true">
       <div class="modal" aria-describedby="modalTitle" role="dialog">
         <header class="Modal-Title-Contact">
           <h2 id="modalTitle">Contactez-moi
-
-            <!-- <img src="assets/icons/close.svg" onclick="closeModal()" class="modal-close-btn" /> -->
             <button class="modal-close-btn" aria-label="Close contact form">
               <img tabindex="0" src="assets/icons/close.svg" alt="Bouton de fermeture icon X" />
             </button>
             <p class="modal-name-photographer"></p>
           </h2>
-
-
         </header>
         <!-- Formulaire -->
         <form novalidate class="formModal">
           <div class="formData">
             <label for="prenom" id="First-name">Prénom </label>
-            <input class="formField" aria-labelledby="First-name" type="text" name="firstName" id="firstName" required
+            <input class="formField" aria-labelledby="First-name" name="firstName" id="firstName" required
               aria-required="true" data-error="Veuillez entrer un prénom d'au moins 3 caractères ." />
             <div id="errorfirstname" class="errormessage" role="alert">
               <p id="errorfirstname1">Veuillez entrer un prénom d'au moins 2 caractères</p>
@@ -77,8 +68,8 @@
 
           <div class="formData">
             <label for="nom" id="Last-name">Nom</label>
-            <input class="formField" aria-labelledby="Last-name" type="text" name="name" id="lastName" required
-              aria-required="true" data-error="Veuillez entrer un nom d'au moins 2 caractères" />
+            <input class="formField" aria-labelledby="Last-name" name="name" id="lastName" required aria-required="true"
+              data-error="Veuillez entrer un nom d'au moins 2 caractères" />
             <div id="errorlastname" class="errormessage" role="alert">
               <p id="errorlastname1">Veuillez entrer un nom d'au moins 2 caractères</p>
             </div>
@@ -92,8 +83,6 @@
               <p id="erroremailmsg">Veuillez entrer une adresse email valide</p>
             </div>
           </div>
-
-
           <div class="formData">
             <label for="message" id="your-message"> Votre message </label>
             <textarea class="formField" aria-labelledby="your-message" name="message" id="message" minlength="20"
@@ -104,28 +93,28 @@
               <p id="errormessagecontact">Veuillez saisir un message entre 20 et 200 caractères</p>
             </div>
           </div>
-
-
           <button class=" btn-submit" type="submit" aria-label="send">Envoyer</button>
-          <!-- <input class=" btn-submit" type="button" aria-label="send" value="Envoyer"> -->
-          <!-- <input type="button" class="btn btn-primary col-12" value="envoyer"> -->
+
         </form>
       </div>
     </div>
+
 
     <!-- Lightbox-->
     <div class="lightbox-container wrapper" aria-hidden="true">
       <div class="lightbox" aria-label="Media closeup view" role="dialog">
 
-        <button class="btn-close-lightbox btn-close" aria-label="Close dialog"></button>
+        <button class="btn-close-lightbox" aria-label="Close dialog">
+          <span aria-hidden="true" class="fa-solid fa-xmark btn-close"></span>
+        </button>
 
         <div role="link" class="controls controls-left" aria-label="Previous media">
-          <i aria-hidden="true" class="fa-solid fa-chevron-left"></i>
+          <span aria-hidden="true" class="fa-solid fa-chevron-left"></span>
           <p class="sr-only">Previous</p>
         </div>
 
         <div role="link" class="controls controls-right" aria-label="Next media">
-          <i aria-hidden="true" class="fa-solid fa-chevron-right"></i>
+          <span aria-hidden="true" class="fa-solid fa-chevron-right"></span>
           <p class="sr-only">Next</p>
         </div>
 
@@ -138,8 +127,12 @@
   </div>
 
 
-  <script type="module" src="./scripts/pages/photographerPage.js"></script>
+
   <script type="module" src="./scripts/utils/contactForm.js"></script>
+  <script type="module" src="./scripts/templates/sorterTemplate.js"></script>
+  <script type="module" src="./scripts/utils/RatingSorterApi.js"></script>
+  <script type="module" src="./scripts/proxy/ProxyRatingSorter.js"></script>
+  <script type="module" src="./scripts/pages/photographerPage.js"></script>
 </body>
 
 </html>
